<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:ignore="ExtraText">
    <EditText
        android:id="@+id/name_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_marginTop="16dp"
        style="@style/HeaderTextStyle"
        android:text="@string/toppings"/>

    <CheckBox
        android:id="@+id/whipped_cream_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/whipped_Cream"
        android:textSize="16sp"/>
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/Choclate"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="12dp"
        style="@style/HeaderTextStyle"
        android:text="@string/Quantity"
        />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/decrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="-"
            android:layout_marginLeft="8dp"
            android:paddingBottom="16dp"
            android:onClick="decrement">

        </Button>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textSize="16dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp"
            />


        <Button
        android:id="@+id/increment"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        android:layout_marginLeft="8dp"
        android:onClick="increment"
        />
    </LinearLayout>



    <Button
        android:text="@string/order"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:id="@+id/order"
        android:onClick="submitOrder"
        />


</LinearLayout>
</ScrollView>












